<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
         <item android:id="@+id/nav_home"
             android:icon="@drawable/baseline_account_circle_24"
             android:title="@string/Profile"/>

        <item android:id="@+id/nav_healthReport"
            android:icon="@drawable/baseline_health_and_safety_24"
            android:title="@string/MedicalReport"/>

        <item android:title="@string/Settings"
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24"/>

        <item android:id="@+id/share"
            android:icon="@drawable/baseline_share_24"
            android:title="Shaew"/>
        <item android:id="@+id/nav_help"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/Help"/>

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"/>
    </group>

</menu>
